Use binance url for fetch the latest crypto prices.
