# apps/Backend/src/routes/prices.routes.ts
@@ -1,8 +1,0 @@
-import express from 'express';
-import { pricesController } from '../features/prices/controllers/prices.controller.js';
-
-const pricesRouter = express.Router();
-
-pricesRouter.get('/latest', pricesController.getLatestPrices);
-
-export default pricesRouter;
